Prevents Chrome's phonomenon that causing slide broken

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="stylesheets/styles.css">
 		<link rel="stylesheet" href="slidesjs/css/style.css">
 
-		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script src="javascripts/jquery-2.1.1.min.js"></script>
 		<script src="slidesjs/js/jquery.slides.min.js"></script>
 		<script>
 			$(function(){
