Updates English description

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 			</div>
 
 			<div class="section textbox intro">
-				<h2 lang="en">In the era of Wars by proxy, Citizen’s life is also operated by Robots.<br />
-				Robots does shop, houseworks, baby-sit and advices instead of people. Entire city is surrounded by logo of it’s manufacturer Nowar Inc until company recalls all of products.<br />
-				After recall of citizen’s dependance, It was in a combat zone when people saw the logo again.<br />
+				<h2 lang="en">In the age of robots and intelligent machines are everywhere, the only robots company “Nowar”recalled all their household robots to rebuild into battle machine. A lucky household robot Tommy was dropped and activated by accident on the way back to the production line. He realized that he is going to be “terminated”and rebuilt by reading the maintenance record in his memory. He has to escape! His happy family is waiting for him!</h2>
 				</h2>
 				<h2 lang="ja">ロボットが代理戦争をする時代、一般市民の生活さえもはやロボットなしでは成り立たない。ロボットは家事を手伝い、子供を見守り、家族の相談にも応じる。ロボットの唯一の製造元であるNowarのロゴは町中に溢れていたが、Nowar社はある日ロボットの一斉リコールを行い、町中からそのトレードマークを消し去った。次に人々がそのマークを見たのは、戦闘地域の真っ只中だった。
 				</h2>
@@ -53,13 +51,13 @@
 			</div>
 
 			<div class="section textbox">
-				<h1 lang="en">Genre: Real Si-Fi Action</h1>
-				<p lang="en">Detected or undetected, killer machines are in operation.<br />
-				You can’t resist them to destroy you. You are abducted.<br />
-				What you can do is hide and pray… or escape without letting them know.</p>
-				<p lang="en">In this game, you’ll control Tommy The Robot to escape from huge factory.<br />
-				But in the factory, bunch of enemies will try to destroy Tommy.</p>
-
+				<h1 lang="en">Sci-Fi Sneaking Action</h1>
+				<p lang="en">Sneak, hide and always in danger, you will become a household robot ZK-T4s (nick name Tommy) escape from the robot factory without any attacking method to defense yourself.</p>
+				<p lang="en">The only two functions that may be helpful are:<br />
+				Transform to a box, originally designed for save some space when recharging.<br />
+				A spot light, originally designed for lighting up the road when walking outside at night.<br />
+				<br />
+				Make the best use of these functions might help you to escape from the huge factory equipped with tons of defending and attacking machines and robots. e.g. hide as a box, puzzle the enemy by the spot light or give them a surprise by transforming!</p>
 				<h1 lang="ja">ジャンル: リアリスティックSi-Fiスニーキングアクション</h1>
 				<p lang="ja">見つかるか見つからないか。ギリギリの緊張感。<br />
 				あなたは抵抗することができない。<br />
@@ -67,11 +65,8 @@
 				</p>
 			</div>
 			<div class="section textbox">
-				<h1 lang="en">“1000 military robots vs a home's robot"</h1>
-				<p lang="en">Can you outwit Military grade A.I. by a household robot?<br />
-				You can’t use any weapons, You don’t have any friend. And your battery is low.<br />
-				One ability is, You can transform into a cube.<br />
-				Escape from fortress-like factory. your intelligence can only make it through.</p>
+				<h1 lang="en">Asymmetric battle</h1>
+				<p lang="en">Your enemies are real battle machines by “Nowar”. They may be holding 20mm pistols, huge powered fist or even special Electromagnetic Pulse which can pause any robots. Of course poor Tommy will become a set of metal scratch or be caught by those unbeatable attacking.</p>
 
 				<h1 lang="ja"> 「軍事ロボット１０００機 vs 家庭用ロボット１機」</h1>
 				<p lang="ja">家庭用ロボットで軍事レベルのAiを出し抜いてください。<br />
@@ -81,11 +76,8 @@
 				トミーは果たしてこの要塞から脱出し、家に帰ることができるのでしょうか？</p>
 			</div>
 			<div class="section textbox">
-				<h1 lang="en">“Unfair Combat"</h1>
-
-				<p lang="en">Massive impact of huge fist, 10000 °C thermic rays, circuit breaking electromagnetic wave.<br />
-				Above weapons are not all of enemy’s weapon.<br />
-				You can’t be saved without avoiding these attacks.</p>
+				<h1 lang="en">Suspicious level</h1>
+				<p lang="en">The enemies not only attack Tommy when find him, but also check all the suspicious items and sounds. So you may have to pay attention to any sound you may make besides sneaking.</p>
 
 				<h1 lang="ja"> 「理不尽な戦闘」</h1>
 				<p lang="ja">超大型ロボによる拳の大打撃、10000度を超える熱線攻撃、回路を一瞬で焼き切る電磁波攻撃。これらは敵の機能の一部です。あなたは体一つでこれらの兵器の攻撃を回避しなければ、助かることができません。</p>
@@ -100,19 +92,13 @@
 				<p lang="ja">敵ロボットはトミーを見つけ次第抹消するだけでなく、怪しい音や物体に反応して確認します。隠れる場所だけでなく、些細な音にも気を配らなければ、たちまち抹消されてしまうでしょう。</p>
 			</div>
 			<div class="section textbox">
-				<h1 lang="en">“No Hint"</h1>
-				<p lang="en">There is no hint in this game. Watch enemy carefully instead.<br />
-				Your inspiration is only one thing to rely on.</p>
+				<h1 lang="en">“UI-less"</h1>
+				<p lang="en">No special UI to tell you the danger or hidden functions you have. You may have to find out yourself in the game.</p>
 
 				<h1 lang="ja">「UIレス（No hint）」</h1>
 				<p lang="ja">ヒントになるUIは一切ありません。よく観察しなければ、蜂の巣にされます。頼れるのは直感だけす。</p>
 			</div>
-			<div class="section textbox">
-				<h1 lang="en">“Box Form"</h1>
-				<p lang="en">Enemies will not percept box as it’s target.<br />
-				By activating compact mode, Tommy become box form.<br />
-				However, because Tommy's cooling system has trouble, He’ll get overheat when using box form for certain seconds.</p>
-
+			<div class="section textbox" lang="ja">
 				<h1 lang="ja">「ボックス機能」</h1>
 				<p lang="ja">家庭用ロボットに備わった収納モードを起動することで、ロボットはただの箱そっくりに変形します。箱は敵ロボットの知覚センサーが認知しません。<br />
 				しかし、移動中の故障が原因で変形中はオーバーヒートするため、長時間の変形はできません。</p>
